--- a/Public/Home/cartoon/book/css/autor.css
+++ b/Public/Home/cartoon/book/css/autor.css
@@ -184,6 +184,10 @@ legend{
     left: 5px;
     bottom: 5px;
 }
+#section_left_cot{
+    width: 100%;
+    height: 650px;
+}
 #section_left_d>a,#section_left_d>span{
     display: block;
     width: 100%;
