--- a/Public/Home/cartoon/book/css/list.css
+++ b/Public/Home/cartoon/book/css/list.css
@@ -147,6 +147,10 @@ legend{
     padding: 20px 15px;
     box-sizing: border-box;
 }
+#section_left_cot{
+    width: 100%;
+    height: 650px;
+}
 .section_left_list{
     width: 100%;
     height: 60px;
@@ -184,10 +188,6 @@ legend{
     left: 5px;
     bottom: 5px;
 }
-#section_left_cot{
-    width: 100%;
-    height: 650px;
-}
 #section_left_d>a,#section_left_d>span{
     display: block;
     width: 100%;
@@ -200,145 +200,16 @@ legend{
 #section_right{
     width: 750px;
     height: 100%;
-    padding: 20px;
+    padding: 20px 20px 110px 20px;
     float: right;
     box-sizing: border-box;
-    background: #f3f3f3;
+    background: #fff;
 }
 #section_right_top{
     width: 100%;
-    height: 35px;
-    line-height: 35px;
-}
-#section_right_top>a{
-    display: block;
-    float: right;
-    width: 80px;
-    height: 30px;
-    line-height: 30px;
-    border-radius: 15px;
-    text-align: center;
-    background: #0592D9;
-    color: #FFFFFF;
-}
-#section_right_notice{
-    width: 100%;
-}
-#section_right_notice>h4{
-    color: #888888;
-}
-#section_right_notice_d{
-    width: 100%;
-    background: #FFFFFF;
-    margin-top: 15px;
-}
-#section_right_one{
-    width:100% ;
-    height: 185px;
-    padding: 20px;
-    box-sizing: border-box;
-    border-bottom: 1px solid #eee;
-}
-#section_right_one>div:nth-child(1){
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-}
-#section_right_one>div:nth-child(1)>span{
-    display: block;
-    float: left;
-}
-#section_right_one>div:nth-child(1)>span:nth-child(2){
-    width: 35px;
-    height: 20px;
-    line-height: 20px;
-    text-align: center;
-    color:#FFFFFF;
-    font-weight: bold;
-    background: #e4393c;
-    border-radius: 3px;
-}
-#section_right_one>p{
-    color: #888888;
-    line-height: 20px;
-    font-size: 13px;
-}
-#section_right_one>div:nth-child(3){
-    width: 100%;
     height: 60px;
-    margin-top: 20px;
+    line-height: 60px;
 }
-#section_right_one>div:nth-child(3)>span{
-    display: block;
-    font-size: 12px;
-    color: #888888;
-    line-height: 20px;
-}
-#section_right_two{
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #eeeeee;
-    box-sizing: border-box;
-}
-#section_right_two>div:nth-child(1) {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-}
-#section_right_two>div:nth-child(1)>span {
-    display: block;
+#section_right_top>h3{
     float: left;
-}
-#section_right_two>div:nth-child(1)>span:nth-child(2) {
-    width: 35px;
-    height: 20px;
-    line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    font-weight: bold;
-    background: #e4393c;
-    border-radius: 3px;
-    margin-left: 5px;
-}
-#section_right_two>div:nth-child(2)>p{
-    color:#888888;
-    font-size: 13px;
-    line-height: 20px;
-}
-#section_right_two>div:nth-child(2)>p:nth-child(2){
-    text-indent: 25px;
-}
-#section_right_two>div:nth-child(3){
-    margin-top: 20px;
-}
-#section_right_two>div:nth-child(3)>span{
-    display: block;
-    font-size: 12px;
-    color: #888888;
-    line-height: 20px;
-}
-#section_right_three{
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #eeeeee;
-    box-sizing: border-box;
-}
-#section_right_three>div:nth-child(1) {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-}
-#section_right_three>div:nth-child(2)>p {
-    color: #888888;
-    font-size: 13px;
-    line-height: 20px;
-}
-#section_right_three>div:nth-child(3){
-    margin-top: 20px;
-}
-#section_right_three>div:nth-child(3)>span {
-    display: block;
-    font-size: 12px;
-    color: #888888;
-    line-height: 20px;
 }
