--- a/Public/Home/cartoon/book/css/view.css
+++ b/Public/Home/cartoon/book/css/view.css
@@ -147,6 +147,10 @@ legend{
     padding: 20px 15px;
     box-sizing: border-box;
 }
+#section_left_cot{
+    width: 100%;
+    height: 650px;
+}
 .section_left_list{
     width: 100%;
     height: 60px;
@@ -186,10 +190,6 @@ legend{
     position: absolute;
     left: 5px;
     bottom: 5px;
-}
-#section_left_cot{
-    width: 100%;
-    height: 650px;
 }
 #section_left_d>a,#section_left_d>span{
     display: block;
@@ -298,103 +298,50 @@ legend{
 #section_down_two>a:hover{
     color: #222222;
 }
-#section_down_two>a:nth-child(2){
+#section_down_two>a:nth-child(1){
     background: none;
     border-bottom:3px solid #e4393c;
 }
 #section_down_three{
     width: 100%;
     overflow: hidden;
-    margin-bottom: 210px;
 }
 #section_down_three>div:nth-child(1){
     width: 100%;
-    height: 30px;
-    line-height: 30px;
-    text-align: right;
+    height: 35px;
+    line-height: 35px;
+    text-indent: 10px;
 }
 #section_down_three>div:nth-child(1)>a{
-    margin-right: 10px;
     color: #0592D9;
 }
-#accordion{
+.view_list{
     width: 100%;
+    padding-bottom: 25px;
     overflow: hidden;
-    margin-top: 10px;
 }
-#accordion>div:nth-child(1){
-    background-color: #fcf7e2;
-    width: 100%;
-    height: 40px;
-    text-indent: 10px;
-    line-height: 40px;
-}
-#accordion>div:nth-child(1)>i,#accordion>div:nth-child(1)>span{
-    cursor: default;
-}
-.articles{
-    width: 100%;
-}
-.articles>li{
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 10px;
-    box-sizing: border-box;
-    border-bottom:1px solid  #eeeeee;
-}
-.articles>li>div{
-    float: left;
-}
-.acc_title>i{
-    display: block;
-    float: left;
-}
-.title-info{
-    width: 375px;
-    height: 50px;
-}
-.title-info>a{
-    color: #0592D9;
-    font-size: 20px;
-}
-.num{
-    width: 55px;
-    height: 50px;
-}
-.act{
-    float: right!important;
-    width: 120px;
-    height: 50px;
+.view_lf{
+    width: 95px;
     text-align: right;
+    float: left;
 }
-.act>a{
-    margin: 0 10px;
-    font-size: 13px;
-    color: #0592D9;
+.view_rg{
+    float: left;
+    margin-left: 10px;
+    width: 500px;
 }
-.prompt{
-    width: 100px;
-    height: 50px;
+.view_rg>img{
+    width: 90px;
+    height: 125px;
+    display: block;
 }
-.prompt>span{
-    font-size: 13px;
-    color: #222222;
+.view_rg>span{
+    margin-right: 15px;
 }
-#section_down_three>.articles>li{
-    background: #f7f7f7;
+.line_h{
+    line-height: 25px;
 }
 
-/*修改话名*/
-.modify{
-    width: 400px;
-    height: 300px;
-    background: #FFFFFF;
-    box-shadow: 0 2px 8px rgba(55,55,55,.22);
-    position: absolute;
-    top: 200px;
-    left: 300px;
-}
 .modify_top{
     width: 100%;
     height: 40px;
@@ -411,103 +358,6 @@ legend{
     font-size: 20px;
     font-weight: bold;
     cursor: default;
-}
-.modify>form{
-    width: 100%;
-    height: 250px;
-    padding: 20px 10px;
-    box-sizing: border-box;
-}
-.row{
-    width: 100%;
-    height: 55px;
-    line-height: 55px;
-    margin-bottom: 20px;
-}
-.name_lf{
-    width: 55px;
-    height: 100%;
-    float: left;
-    text-align: right;
-}
-.name_rg{
-    float: left;
-    margin-left: 10px;
-}
-.inp_one{
-    width: 100px;
-    height: 35px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding-left: 5px;
-    box-sizing: border-box;
-}
-.inp_two{
-    width: 200px;
-    height: 35px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding-left: 5px;
-    box-sizing: border-box;
-}
-.name_footer{
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    margin-top: 40px;
-}
-.name_footer>input{
-    width: 120px;
-    height: 35px;
-}
-.name_footer>input:nth-child(1){
-    margin-left: 50px;
-    background: #e4393c;
-    color: #FFFFFF;
-}
-.name_footer>input:nth-child(2){
-    margin-left: 20px;
-}
-.error{
-    line-height: 16px;
-    color: #e4393c;
-    font-size: 13px;
-}
-/*话删除*/
-#modify_del{
-    width: 400px;
-    height: 200px;
-    background: #FFFFFF;
-    box-shadow: 0 2px 8px rgba(55,55,55,.22);
-    position: absolute;
-    top: 300px;
-    left: 300px;
-}
-#modify_del>div:nth-child(2){
-    width: 100%;
-    height: 120px;
-    text-align: center;
-    line-height: 150px;
-}
-#modify_del>div:nth-child(3){
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-}
-#modify_del>div:nth-child(3)>input{
-    display: block;
-    float: left;
-    width: 100px;
-    height: 35px;
-    line-height: 35px;
-}
-#modify_del>div:nth-child(3)>input:nth-child(1){
-    margin-left: 90px;
-    background: #e4393c;
-    color: #FFFFFF;
-}
-#modify_del>div:nth-child(3)>input:nth-child(2){
-    margin-left: 20px;
 }
 
 /*更新公告*/
