--- a/Public/Home/cartoon/book/css/list.css
+++ b/Public/Home/cartoon/book/css/list.css
@@ -246,7 +246,6 @@ legend{
     border-radius: 3px;
     height: 30px;
     margin: 0 8px;
-    padding-left: 10px;
     box-sizing: border-box;
     text-align:center
 }
@@ -285,17 +284,17 @@ table {
 table thead {
     background: #fff;
 }
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
+table, caption, tbody, tfoot, thead, tr, th, td{
+    vertical-align: middle;
+    border-collapse:collapse;
 }
  .result table th {
     height: 40px;
     font-size: 14px;
     color: #b1b1b1;
+    vertical-align: middle;
 }
- .result table th, .booklist .result table td {
+ .result table th,.result table td {
     margin: 0;
     padding: 0;
     border: 1px solid #f5f5f5;
@@ -307,16 +306,35 @@ tr {
      height: 147px;
      text-align: left;
  }
- .result table td.bookinfo a{
-    width: 90px;
-    height: 126px;
-    display: block;
-}
  .result table td.bookinfo a img {
     float: left;
     width: 90px;
     height: 100%;
     margin-right: 14px;
+}
+.result table td.bookinfo .info p.title {
+    margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 20px;
+}
+ .result table td.bookinfo .info {
+    position: relative;
+    float: left;
+    width: 136px;
+    height: 100%;
+}
+.result table td.bookinfo .info p {
+    font-size: 12px;
+    line-height: 18px;
+    color: #666;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.result table td.bookinfo .info .edit{
+    margin: 10px 0;
+    color: #0592D9;
 }
 .result table td.num {
     font-size: 22px;
@@ -341,4 +359,15 @@ tr {
 }
  .result table td.oper a:last-child {
     margin-bottom: 0;
+}
+#no_works{
+    width: 100%;
+    margin: 50px auto;
+    text-align: center;
+}
+#no_works>p{
+    color: #222222;
+}
+#no_works>p>a{
+    color: #0592D9;
 }
