--- a/Public/Home/simple_cartoon/css/opus.css
+++ b/Public/Home/simple_cartoon/css/opus.css
@@ -224,7 +224,7 @@ legend{
 #main_one_right_six>div:nth-child(1){
     margin-left: 50px;
 }
-#main_one_right_six>div>span{
+#main_one_right_six>div>a>span{
     font-size: 25px;
     color: #222;
     vertical-align: middle;
@@ -238,6 +238,11 @@ legend{
     border-radius: 25px;
     background: #FACBD6;
     cursor: pointer;
+}
+#main_one_right_six>div:nth-child(1)>a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 #main_one_right_six>div:nth-child(1):hover{
     background: #F5AAB9;
